# MetaMCP

./: .env.example  .gitignore  Dockerfile  MCP_SETUP.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_permissions.py  get_page_token.py  test_demo.py  test_facebook.py  test_real.py
src/: __init__.py  __main__.py  config.py  errors.py  logging_config.py  meta_client.py  models.py  server.py  validators.py
src/adapters/: __init__.py  base.py  facebook.py  instagram.py  mock.py  whatsapp.py
tests/: conftest.py  test_meta_client.py  test_models.py  test_validators.py
